# adam_fo

./: .gitignore  pyproject.toml
src/adam_fo/: _version.py  run_fo.py
tests/: test_fo.py
tests/data/: adam-thor-candidates.psv
